style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* colors: #16c79a #19456b #11698e #f8f1f1 */

/* defaults */
body {
  background-color: #f8f1f1;
}
.container {
  padding: 0 2rem;
  width: 100%;
  max-width: 800px;
  margin: auto;
}

h1,
h2,
h3,
h4,
h5,
p,
button {
  font-family: "Montserrat", sans-serif;

  padding: 0.5rem;
  color: #11698e;
}
button {
  background-color: #11698e;
  border: none;
  outline: none;
  color: #f8f1f1;
  height: 2rem;

  border-radius: 10px;
}

img {
  width: 200px;
  filter: drop-shadow(0 3px 3px #11698e);
}

i {
  font-size: 2rem;
  color: #16c79a;
}

.displayNone {
  display: none;
}

/* specific defaults */

.navbar {
  min-height: auto;
  margin-bottom: 5%;
  padding: 1rem 0;
}

.hero {
  height: 70%;
}
@media (max-width: 279px) {
  body {
    background-color: black;
  }
  .container {
    display: none;
  }
}
@media only screen and (min-width: 280px) {
  /* boilerplate for 320px width screen */
  section {
    height: 100vh;
  }

  /* #homepage */
  /* default styles for 320px */
  .navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;

    margin: 0;
  }
  .hero {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 80%;
    margin-bottom: auto;
    text-align: center;
    overflow: hidden;
    position: relative;
  }

  /* specific navbar content styles for 320px */
  #top-nav,
  .navbar-contactButton,
  .close-menu {
    display: none;
  }
  .open-menu {
    display: block;
  }
  .open-menu i {
    font-size: 1rem;
    color: #f8f1f1;
  }

  .navbar-logo {
    display: block;
    width: auto;
    height: 3rem;
    max-width: 100px;
    max-height: 115px;
    margin: auto auto auto 0;
  }
  .navbar-downloadCVButton {
    display: none;
  }
  .hamburger-menu {
    margin: auto 0 auto auto;
  }

  /* specific hero content styles for 320px */

  .hero-text-and-buttons {
    margin-bottom: 1rem;
  }

  /* text */
  .hero h1 {
    font-size: 2rem;
    font-weight: 500;
  }
  .hero h2 {
    font-size: 1rem;
    font-weight: 300;
  }
  .hero h3 {
    font-size: 1rem;
    font-weight: 500;
  }

  /* image */
  .hero-image {
    width: 70%;
    margin: 0 auto 0.5rem;
  }
  /* icons */

  .background-design {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    position: absolute;
    padding: 0.5rem;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
    z-index: -1;
    height: 100%;
    width: 5rem;

    opacity: 0.3;
  }
  .background-design i {
    font-size: 5rem;
  }

  /* buttons */

  .hero-button {
    margin: 0 auto 0.5rem;
    width: 140px;
  }

  /* #aboutme */
  /* specific styles for 320px */
  #aboutme {
    background-color: green;
  }
  .aboutme-content {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;
  }
}

/* special IPHONE 5/SE resolution */
@media (device-aspect-ratio: 40/71) {
  .hero {
    height: 80vh;
  }
  /* image */
  .hero-image {
    width: 120px;
  }
}
@media (min-width: 480px) and (orientation: portrait) {
  /* #homepage  - nav */

  /* #homepage  - hero */
  .hero {
    text-align: center;
    justify-content: space-around;
    align-items: center;
  }
  .hero-text {
    position: relative;
    z-index: 1;
  }

  .hero-text h1 {
    font-size: 2.2rem;
  }
  .hero-text h2 {
    font-size: 1.5rem;
  }
  .hero-button {
    margin: 0 auto 1rem 0.5rem;
  }

  .hero-image {
    width: 60%;
  }
}
@media (min-width: 768px) {
  /* general */

  button {
    height: 3rem;
    font-size: 1rem;
    width: 50px;
  }

  /* #homepage - navbar */
  .background-design i {
    font-size: 5rem;
  }
  .navbar-logo {
    margin-left: 1rem;
  }
  #top-nav {
    display: block;
    width: 100%;
  }
  .menu-list {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding: 1rem;
    list-style: none;
  }

  .menu-list-item button {
    width: auto;
    height: 2rem;

    background-color: transparent;
    color: #11698e;
    font-weight: 600;
  }

  .navbar-contactButton {
    display: block;
    width: 150px;
    margin: auto;
  }
  .navbar-contactButton Button {
    width: 100%;
  }
  .hamburger-menu {
    background-color: #11698e;
    color: #f8f1f1;
    height: auto;
    width: auto;
    display: none;
  }
  /* #homepage - hero */

  .hero {
    position: relative;
    justify-content: space-around;
  }
  .hero-text h1 {
    font-size: 3rem;
  }
  .hero-text h2 {
    font-size: 2rem;
  }
  .hero-text h3 {
    font-size: 1.5rem;
  }

  .hero-image {
    width: auto;
  }

  .hero-button {
    width: 160px;
  }
}
@media (min-width: 980px) {
  /* default styles */
  .container {
    max-width: 90%;
  }
  #home {
    position: relative;
  }
  .background-design {
    position: absolute;
    bottom: 35%;
    left: 15%;
    transform: translate(-50%, -35%) rotate(-45deg);
    clear: both;
  }
  .background-design i {
    font-size: 10rem;
  }
  /* navbar styles */
  .navbar {
    justify-content: space-between;
  }
  #top-nav {
    width: auto;
  }
  .menu-list-item {
    margin: 0 1rem;
  }
  .navbar-contactButton {
    margin-right: 1rem;
  }
  /* hero styles */
  .hero {
    justify-content: center;
    align-items: flex-start;
    overflow: visible;
  }
  .hero-image {
    position: absolute;
    right: 0;
  }
  .hero-text {
    text-align: left;
    margin-bottom: 3rem;
    position: relative;
    z-index: 1;
  }
}
@media (min-width: 1200px) {
  /* default styles */
  .container {
  }
  .background-design i {
    font-size: 20rem;
  }
  /* hero styes */
  .hero {
    margin: auto;
    width: 980px;
  }
}

